fix: broken contrast in dark theme

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -788,6 +788,7 @@ input[type="submit"] {
       display: flex;
       flex-direction: column;
       list-style: none;
+      color: var(--ff-clr-700);
     }
   }
 }
